# Convolutional-Tensor-Networks-for-Weight-based-Mechanistic-Interpretability

./: .gitignore  README.md
bilinear_decomposition/: README.md  analysis.ipynb  sweep_kernel_results.csv
bilinear_decomposition/image/: datasets.py  model.py  plotting.py
bilinear_decomposition/shared/: components.py
cnn_to_tn/: README.md  __init__.py  pyproject.toml
cnn_to_tn/SVHN/: __init__.py  setup_svhn.py  svhn_model.py  sweep.yaml  test_svhn.py  train_svhn.py
cnn_to_tn/cifar_10/: __init__.py  cifar_10_model.py  setup_cifar10.py  sweep.yaml  test_cifar_10.py  train_cifar_10.py
cnn_to_tn/cifar_100/: __init__.py  cifar_100_model.py  setup_cifar100.py  sweep.yaml  test_cifar_100.py  train_cifar_100.py
cnn_to_tn/converter/: __init__.py  convert.py  scalability_experiment.py  test_convert.py
cnn_to_tn/mnist/: __init__.py  mnist_model.py  setup_mnist.py  sweep.yaml  test_mnist.py  train_mnist.py
cnn_to_tn/utils/: BilinearLayer2d.py  RMSNorm2d.py  ResidualBlock.py  model.py  train.py  tuning.py  wandbai.py
