[project]
name = "cnn-to-tn"
version = "0.1.0"
description = "Build, train, and convert a residual bilinear CNN into an equivalent tensor network."
requires-python = ">=3.13"
dependencies = [
    # Modeling / training
    "torch==2.10.0",
    "torchvision==0.25.0",
    "numpy==2.4.2",
    # Tensor-network backend
    "quimb==1.13.0",
    # Experiment tracking / hyperparameter sweeps
    "wandb>=0.18",
    # Dataset download (ImageNet-100)
    "huggingface_hub>=0.27",
    # Plotting
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ipykernel==7.2.0",
]

[tool.uv]
package = false
